--- a/site/index.html
+++ b/site/index.html
@@ -45,6 +45,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
+                <h1>This is test CI/CD</h1>
                 <div class="navbar-brand"><a href="#">Patsy Doherty</a>
                 <div class="title"> - hat designer - </div>
                 </div>
