--- a/site/index.html
+++ b/site/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
     <head>
-        <title>Patsy Doherty - Home</title>
+        <title>Patsy Doherty - Home(CI/CD Test)</title>
 
         <meta charset="utf-8">
         <meta name="description" content="">
